--- a/_includes/sidebar-popular-repo.html
+++ b/_includes/sidebar-popular-repo.html
@@ -1,8 +1,6 @@
 <h3>Books &amp; Movies I Love</h3>
+<div>
 <p>
 <script type="text/javascript" src="https://www.douban.com/service/badge/sonion/?selection=random&amp;picsize=small&amp;hideself=on&amp;show=collection&amp;n=1&amp;hidelogo=on&amp;cat=movie%7Cbook&amp;columns=1"></script>
 </p>
-<h3>Books &amp; Movies I Want</h3>
-<p>
-<script type="text/javascript" src="https://www.douban.com/service/badge/sonion/?selection=random&amp;picsize=small&amp;hideself=on&amp;show=wishlist&amp;n=1&amp;hidelogo=on&amp;cat=movie%7Cbook&amp;columns=1"></script>
-</p>
+</div>
