--- a/_includes/sidebar-popular-repo.html
+++ b/_includes/sidebar-popular-repo.html
@@ -1,6 +1,6 @@
 <h3>Books &amp; Movies I Love</h3>
 <div style="width:100px">
 <p>
-<script type="text/javascript" src="http://www.douban.com/service/badge/sonion/?selection=random&amp;picsize=small&amp;hideself=on&amp;show=collection&amp;n=1&amp;hidelogo=on&amp;cat=movie%7Cbook&amp;columns=1"></script>
+<script type="text/javascript" src="https://www.douban.com/service/badge/sonion/?selection=random&amp;picsize=small&amp;hideself=on&amp;show=collection&amp;n=1&amp;hidelogo=on&amp;cat=movie%7Cbook&amp;columns=1"></script>
 </p>
 </div>
